--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,15 @@ body {
 
 }
 header{
-    background-color: rgb(196, 241, 81);
-    height: 200px;
+    background-color: rgb(159, 163, 155);
+    height: 150px;
 }
 h1{
     margin-left: 100px;
     margin-right: 200px;
     margin-top: 10px;
     text-align: center;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 80px;
     /*margin t,r,b,l*/
     color: whitesmoke;
@@ -19,12 +20,16 @@ h1{
 }
 ul{
     align-items: center;
+    text-align: center;
     background-color: rgb(60, 221, 167);
 }
+
+
 nav li{
     display: inline-block;
     margin-top:  25px;
     margin-left: 50px;
+    margin-right: 50px;
     text-align: center;
 }
 nav li a{
@@ -45,6 +50,13 @@ width: 1000px;
 margin: 0px auto;
 min-height: 700px;
 }
+/*p {
+    align-items: center;
+    color:rgb(66, 160, 214);
+    font-size: 16px;
+    margin-top:  5px;
+    margin-bottom: 5px;
+}*/
 
 footer{
 text-align: center;
@@ -55,20 +67,19 @@ background-color: rgb(224,206,209);
     height: 200px;
     border: 10px solid white ;
 }
-.class test {
-background-color: coral;
+.test img{
+    max-width: 200px;
 }
+.test {
+align-items: center;
+color:rgb(66, 160, 214);
+font-size: 16px;
+margin-top:  5px;
+margin-bottom: 5px;
+}
+
 .lowerPics{
     display: inline-block;
     max-width: 30%;
     margin: 15px;
-}
-p {
-    align-items: center;
-    color:rgb(66, 160, 214);
-    font-size: 16px;
-    margin-top:  5px;
-    margin-bottom: 5px;
-
-
 }
