--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,28 @@
 body {
-    background-color: rgb(187, 211, 226);
+    background-color: rgb(222, 255, 248);
     font-family: Arial, Helvetica, sans-serif
 
 }
 header{
-    background-color: rgb(159, 163, 155);
+    background-color: rgba(100, 88, 83, 1);;
     height: 150px;
 }
 h1{
     margin-left: 100px;
     margin-right: 200px;
     margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
     font-family:Georgia, 'Times New Roman', Times, serif;
     font-size: 80px;
     /*margin t,r,b,l*/
-    color: whitesmoke;
+    color: rgba(255, 111, 89, 1);
     text-shadow: 1px,1px,1px rgb(24,56,78);
 }
 ul{
     align-items: center;
     text-align: center;
-    background-color: rgb(60, 221, 167);
+    background-color: #44cfcbff;
 }
 
 
@@ -34,7 +35,7 @@ nav li{
 }
 nav li a{
     align-items: center;
-color:rgb(66, 160, 214);
+color:rgb(50, 110, 156);
 font-size: 30px;
 text-decoration: none;
 font-weight: bold;
@@ -78,8 +79,12 @@ margin-top:  5px;
 margin-bottom: 5px;
 }
 
-.lowerPics{
+.lowerpics{
     display: inline-block;
     max-width: 30%;
     margin: 15px;
+}
+.img_small{
+    width: 100px;
+    max-width: 100px;
 }
