added photo margins

--- a/css/style.css
+++ b/css/style.css
@@ -87,4 +87,8 @@ margin-bottom: 5px;
 .img_small{
     width: 100px;
     max-width: 100px;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
