--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ background-color: rgb(224,206,209);
 .test {
 align-items: center;
 color:rgb(66, 160, 214);
-font-size: 16px;
+font-size: 24px;
 margin-top:  5px;
 margin-bottom: 5px;
 }
@@ -83,6 +83,7 @@ margin-bottom: 5px;
     display: inline-block;
     max-width: 30%;
     margin: 15px;
+
 }
 .img_small{
     width: 100px;
@@ -91,4 +92,5 @@ margin-bottom: 5px;
     margin-right: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
+    border-radius: 30px;
 }
